--- a/como-llego.html
+++ b/como-llego.html
@@ -13,7 +13,7 @@
 <body>
     <header class="d-flex justify-content-center py-3" id="navega">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="inicio.html" class="nav-link" id="bot1">¡Nos casamos!</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></li>
           <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></li>
           <li class="nav-item"><a href="como-llego.html"  class="nav-link active" aria-current="page" id="bot2">Indicaciones</a></li>
           <li class="nav-item"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></li>
