--- a/como-llego.html
+++ b/como-llego.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="DyA.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Anita & David</title>
@@ -26,7 +26,7 @@
         <div id="texto">
         <h5>Ceremonia</h5>
         <p>
-            Te esperamos a las HORA horas para compartir la cereminia de nuestra union en la capilla Santa Teresita.
+            Te esperamos a las HORA horas para compartir la ceremonia de nuestra unión en la capilla Santa Teresita.
             
         </p>
         <p>
@@ -40,7 +40,7 @@
     </section>
     <section class="otra">
         <p>
-            A continuacion encontras los enlaces a tu navegador de conficanza:
+            A continuación encontras los enlaces a tu navegador de confianza:
         </p>
     </section>
         <section class="botones">
@@ -52,11 +52,11 @@
         <div id="texto">
         <h5>Fiesta</h5>
         <p>
-            Despues de la ceremonia (HORA horas), festejamos juntos en la Hostería El Cazador.
+            Después de la ceremonia (HORA horas), festejamos juntos en la Hostería El Cazador.
            
         </p>
         <p>
-            Dirección: calle John F. Kennedy nro. 851 de Belén de escobar (B).
+            Dirección: calle John F. Kennedy nro. 851 de Belén de Escobar (B).
         </p>
     </div>
     <div id="mapa">
@@ -66,7 +66,7 @@
     </section>
     <section class="otra">
         <p>
-            A continuacion encontras los enlaces a tu navegador de conficanza:
+            A continuación encontras los enlaces a tu navegador de confianza:
         </p>
     </section>
         <section class="botones">
