--- a/como-llego.html
+++ b/como-llego.html
@@ -26,7 +26,7 @@
         <div id="texto">
         <h5>Ceremonia</h5>
         <p>
-            Te esperamos a las HORA horas para compartir la ceremonia de nuestra unión en la capilla Santa Teresita.
+            Te esperamos a las 17:15 horas para compartir la ceremonia de nuestra unión en la capilla Santa Teresita.
             
         </p>
         <p>
@@ -52,7 +52,7 @@
         <div id="texto">
         <h5>Fiesta</h5>
         <p>
-            Después de la ceremonia (HORA horas), festejamos juntos en la Hostería El Cazador.
+            Después de la ceremonia (18:30 horas), festejamos juntos en la Hostería El Cazador, a 600 metros de la capilla.
            
         </p>
         <p>
