--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Capture.PNG" class="d-block w-100">
+            <img src="imagen1.jpeg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="fondo pantalla banana.PNG" class="d-block w-100">
+            <img src="imagen2.jpeg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="Image 5.png" class="d-block w-100">
+            <img src="imagen3.jpeg" class="d-block w-100">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
