--- a/regalos.html
+++ b/regalos.html
@@ -38,18 +38,14 @@
         <div class="card w-75 mb-3"  >
             <div class="card-body">
               <h5 class="card-title">Cuenta bancaria en pesos </h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Banco </p>
+              <p class="card-text">Alias: </p>
+              <p class="card-text">CBU: </p>
+              <p class="card-text">CUIL: </p>
             </div>
           </div>
         </div>
-        <div id="tarjeta">
-          <div class="card w-75 mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Cuenta bancaria en dólares </h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
+        
     </section>
   </div>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
