--- a/asistencia.html
+++ b/asistencia.html
@@ -16,10 +16,10 @@
   <div class="contenedor">
     <header class="d-flex justify-content-center py-3" id="navega">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></li>
-          <li class="nav-item"><a href="asistencia.html" class="nav-link active" aria-current="page" id="bot2">Asistencia</a></li>
-          <li class="nav-item"><a href="como-llego.html" class="nav-link" id="bot1">Indicaciones</a></li>
-          <li class="nav-item"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></button></li>
+          <li class="nav-item"><button class="btn btn-primary"id="bot2"><a href="asistencia.html" class="nav-link active" aria-current="page" id="bot2">Asistencia</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="como-llego.html" class="nav-link" id="bot1">Indicaciones</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></button></li>
         </ul>
       </header>
 <section class="esta">      
