--- a/como-llego.html
+++ b/como-llego.html
@@ -16,21 +16,21 @@
     <div class="contenedor">
     <header class="d-flex justify-content-center py-3" id="navega">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></li>
-          <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></li>
-          <li class="nav-item"><a href="como-llego.html"  class="nav-link active" aria-current="page" id="bot2">Indicaciones</a></li>
-          <li class="nav-item"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></button></li>
+          <li class="nav-item"><button class="btn btn-primary"id="bot2"><a href="como-llego.html"  class="nav-link active" aria-current="page" id="bot2">Indicaciones</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></button></li>
         </ul>
       </header>
     <section class="super">
         <div id="texto">
         <h5>Ceremonia</h5>
         <p>
-            Te esperamos a las 17:15 horas para compartir la ceremonia de nuestra unión en la capilla Santa Teresita.
+            Te esperamos a las <strong>17:00 horas</strong> en la <strong>capilla Santa Teresita</strong> para compartir la ceremonia.
             
         </p>
         <p>
-            Dirección: calle John F. Kennedy nro. 590 de Belén de Escobar (B).
+            <strong>Dirección:</strong> calle John F. Kennedy nro. 590 de Belén de Escobar (B).
         </p>
     </div>
     <div id="mapa">
@@ -40,7 +40,7 @@
     </section>
     <section class="otra">
         <p>
-            A continuación encontras los enlaces a tu navegador de confianza:
+            Hacé click para ver cómo llegar en la aplicación que uses:
         </p>
     </section>
         <section class="botones">
@@ -52,11 +52,11 @@
         <div id="texto">
         <h5>Fiesta</h5>
         <p>
-            Después de la ceremonia (18:30 horas), festejamos juntos en la Hostería El Cazador, a 600 metros de la capilla.
+            Luego de la ceremonia, festejamos juntos en la <strong>Hostería El Cazador</strong>, a 600 metros de la capilla donde realizamos la ceremonia.
            
         </p>
         <p>
-            Dirección: calle John F. Kennedy nro. 851 de Belén de Escobar (B).
+            <strong>Dirección:</strong> calle John F. Kennedy nro. 851 de Belén de Escobar (B).
         </p>
     </div>
     <div id="mapa">
@@ -66,7 +66,7 @@
     </section>
     <section class="otra">
         <p>
-            A continuación encontras los enlaces a tu navegador de confianza:
+            Hacé click para ver cómo llegar en la aplicación que uses:
         </p>
     </section>
         <section class="botones">
