--- a/regalos.html
+++ b/regalos.html
@@ -16,20 +16,19 @@
   <div class="contenedor">
     <header class="d-flex justify-content-center py-3" id="navega">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></li>
-          <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></li>
-          <li class="nav-item"><a href="como-llego.html" class="nav-link" id="bot1">Indicaciones</a></li>
-          <li class="nav-item"><a href="regalos.html" class="nav-link active" aria-current="page" id="bot2">Regalos</a></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="como-llego.html" class="nav-link" id="bot1">Indicaciones</a></button></li>
+          <li class="nav-item"><button class="btn btn-primary"id="bot2"><a href="regalos.html" class="nav-link active" aria-current="page" id="bot2">Regalos</a></button></li>
         </ul>
       </header>
       <section class="super">
-        <div>
-            <p>
-               El regalo más importante para nosotros es tu presencia.
-               Si también querés colaborar con nuestros futuros proyectos, podes hacerlo en estas cuentas bancarias:
+        <div class="regalo">
+            <p class="regalo">
+              Lo más importante es que vengas ese día…
             </p>
-            <p>
-                
+            <p class="regalo">
+              El regalo es opcional, ¡tu presencia es obligatoria!🥰 
             </p>
         </div>
     </section>
@@ -37,11 +36,12 @@
         <div id="tarjeta">
         <div class="card w-75 mb-3"  >
             <div class="card-body">
-              <h5 class="card-title">Cuenta bancaria en pesos </h5>
-              <p class="card-text">Banco </p>
-              <p class="card-text">Alias: </p>
-              <p class="card-text">CBU: </p>
-              <p class="card-text">CUIL: </p>
+              <h5 class="card-title">EN PESOS </h5>
+              <p class="card-text">Banco Nación</p>
+              <p class="card-text">Caja de Ahorro $ 00190930387787 </p>
+              <p class="card-text">CBU: 0110093830009303877879 </p>
+              <p class="card-text">Alias: anitaydavid2024 </p>
+              <p class="card-text">Cuil:20347146073 </p>
             </div>
           </div>
         </div>
