--- a/como-llego.html
+++ b/como-llego.html
@@ -25,10 +25,12 @@
     <section class="super">
         <div id="texto">
         <h5>Ceremonia</h5>
-        <p>Te esperamos a las <strong>17:00 horas</strong> en la <strong>capilla Santa Teresita</strong> para compartir la ceremonia.
+        <p>
+            Te esperamos a las <strong>17:00 horas</strong> en la <strong>capilla Santa Teresita</strong> para compartir la ceremonia.
             
         </p>
-        <p><strong>Dirección:</strong> calle John F. Kennedy nro. 590 de Belén de Escobar (B).
+        <p>
+            <strong>Dirección:</strong> calle John F. Kennedy nro. 590 de Belén de Escobar (B).
         </p>
     </div>
     <div id="mapa">
