--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="d-flex justify-content-center py-3" id="navega" style="width: 100%;">
         <ul class="nav nav-pills">
           <li class="nav-item"><button class="btn btn-primary"id="bot2"><a href="index.html" class="nav-link active" aria-current="page" id="bot2">¡Nos casamos!</a></button></li>
-          <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="asistencia.html" class="nav-link" id="bot1">Asistencia</a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="como-llego.html" class="nav-link" id="bot1">Indicaciones</a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-outline-dark"><a href="regalos.html" class="nav-link" id="bot1">Regalos</a></button></li>
         </ul>
