--- a/como-llego.html
+++ b/como-llego.html
@@ -16,8 +16,8 @@
     <div class="contenedor">
     <header class="d-flex justify-content-center py-3" id="navega">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1">¡Nos casamos!</button></a></li>
-          <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1">Asistenci</button>a</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link" id="bot1"><button type="button" class="btn btn-outline-dark">¡Nos casamos!</button></a></li>
+          <li class="nav-item"><a href="asistencia.html" class="nav-link" id="bot1"><button type="button" class="btn btn-outline-dark">Asistencia</button></a></li>
           <li class="nav-item"><button class="btn btn-primary"id="bot2"><a href="como-llego.html"  class="nav-link active" aria-current="page" id="bot2">Indicaciones</a></button></li>
           <li class="nav-item"><a href="regalos.html" class="nav-link" id="bot1"><button type="button" class="btn btn-outline-dark">Regalos</button></a></li>
         </ul>
