--- a/index.html
+++ b/index.html
@@ -36,46 +36,46 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="1.pdf" class="d-block w-100">
+            <img src="1.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="2.pdf" class="d-block w-100">
+            <img src="2.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="3.pdf" class="d-block w-100">
+            <img src="3.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="4.pdf" class="d-block w-100">
+            <img src="4.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="5.pdf" class="d-block w-100">
+            <img src="5.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="6.pdf" class="d-block w-100">
+            <img src="6.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="7.pdf" class="d-block w-100">
+            <img src="7.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="8.pdf" class="d-block w-100">
+            <img src="8.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="9.pdf" class="d-block w-100">
+            <img src="9.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="10.pdf" class="d-block w-100">
+            <img src="10.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="11.pdf" class="d-block w-100">
+            <img src="11.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="12.pdf" class="d-block w-100">
+            <img src="12.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="13.pdf" class="d-block w-100">
+            <img src="13.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="14.pdf" class="d-block w-100">
+            <img src="14.jpg" class="d-block w-100">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
