--- a/regalos.html
+++ b/regalos.html
@@ -36,12 +36,12 @@
         <div id="tarjeta">
         <div class="card w-75 mb-3"  >
             <div class="card-body">
-              <h5 class="card-title">EN PESOS </h5>
-              <p class="card-text">Banco Nación</p>
-              <p class="card-text">Caja de Ahorro $ 00190930387787 </p>
-              <p class="card-text">CBU: 0110093830009303877879 </p>
+              <h5 class="card-title">Banco Santander </h5>
+              <p class="card-text">Cuentas en Pesos 130-365250/5 </p>
+              <p class="card-text">CBU: 0720130788000036525054 </p>
               <p class="card-text">Alias: anitaydavid2024 </p>
-              <p class="card-text">Cuil:20347146073 </p>
+              <p class="card-text">Titular: Villanueva del Rio David Javier</p>
+              <p class="card-text">DNI:34714607</p>
             </div>
           </div>
         </div>
